--- a/CalendarTemplates/RunTemplate.xaml
+++ b/CalendarTemplates/RunTemplate.xaml
@@ -13,6 +13,45 @@
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d"
     shell:SystemTray.IsVisible="True">
+    <phone:PhoneApplicationPage.Resources>
+        <Style x:Key="HyperlinkButtonStyle1" TargetType="HyperlinkButton">
+            <Setter Property="Foreground" Value="{StaticResource PhoneSubtleBrush}"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="FontSize" Value="{StaticResource PhoneFontSizeSmall}"/>
+            <Setter Property="Padding" Value="0"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="HyperlinkButton">
+                        <Border Background="Transparent">
+                            <VisualStateManager.VisualStateGroups>
+                                <VisualStateGroup x:Name="CommonStates">
+                                    <VisualState x:Name="Normal"/>
+                                    <VisualState x:Name="MouseOver"/>
+                                    <VisualState x:Name="Pressed">
+                                        <Storyboard>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground" Storyboard.TargetName="TextElement">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneAccentBrush}"/>
+                                            </ObjectAnimationUsingKeyFrames>
+                                        </Storyboard>
+                                    </VisualState>
+                                    <VisualState x:Name="Disabled">
+                                        <Storyboard>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground" Storyboard.TargetName="TextElement">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneDisabledBrush}"/>
+                                            </ObjectAnimationUsingKeyFrames>
+                                        </Storyboard>
+                                    </VisualState>
+                                </VisualStateGroup>
+                            </VisualStateManager.VisualStateGroups>
+                            <Border Background="{TemplateBinding Background}" Margin="{StaticResource PhoneHorizontalMargin}" Padding="{TemplateBinding Padding}">
+                                <TextBlock x:Name="TextElement" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Text="{TemplateBinding Content}" TextDecorations="Underline" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                            </Border>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </phone:PhoneApplicationPage.Resources>
 
     <toolkit:TransitionService.NavigationInTransition>
         <toolkit:NavigationInTransition>
@@ -35,7 +74,7 @@
         </toolkit:NavigationOutTransition>
     </toolkit:TransitionService.NavigationOutTransition>
 
-    <Grid x:Name="LayoutRoot" Background="Transparent" Visibility="Collapsed">
+    <Grid x:Name="LayoutRoot" Background="Transparent" Visibility="Visible">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -46,13 +85,30 @@
         </StackPanel>
 
         <Grid Grid.Row="1" >
-            <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,100">
+            <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <Image x:Name="Icon" HorizontalAlignment="Center" Stretch="None"/>
                 <TextBlock Text="{Binding Path=LocalizedResources.RunDescr, Source={StaticResource LocalizedStrings}}" Style="{StaticResource JumpListAlphabetSmallStyle}" TextWrapping="Wrap" TextAlignment="Center" Grid.Row="1" />
+                <TextBlock Text="{Binding Path=LocalizedResources.RunDonation1, Source={StaticResource LocalizedStrings}}" TextWrapping="Wrap" TextAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" Margin="12,12,12,0" Grid.Row="2" HorizontalAlignment="Center" />
+                <Grid Grid.Row="3" Margin="0" HorizontalAlignment="Center">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <TextBlock Text="{Binding Path=LocalizedResources.RunDonation2, Source={StaticResource LocalizedStrings}}" TextWrapping="Wrap" TextAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" Margin="12,0,0,0" Grid.Row="1" />
+                    <HyperlinkButton Content="{Binding Path=LocalizedResources.RunDonation3, Source={StaticResource LocalizedStrings}}" Style="{StaticResource HyperlinkButtonStyle1}" NavigateUri="/HelpPage.xaml" Grid.Column="1" Margin="-12,0" Grid.Row="1" />
+                    <TextBlock Text="{Binding Path=LocalizedResources.RunDonation4, Source={StaticResource LocalizedStrings}}" TextWrapping="Wrap" TextAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" Margin="0,0,12,0" Grid.Column="2" Grid.Row="1" />
+                </Grid>
             </Grid>
             <TextBlock Text="{Binding Path=LocalizedResources.RunNote, Source={StaticResource LocalizedStrings}}" Style="{StaticResource PhoneTextNormalStyle}" TextWrapping="Wrap" Grid.Row="1" VerticalAlignment="Bottom" Margin="12,0,12,20" />
         </Grid>
